adding functions to verify

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <input type="password" id="confirmPassword" name="confirmPassword">
         <span class="error-message" id="confirmPasswordError"></span>
       </div>
-      <button type="submit">Register</button>
+      <button class="submitBtn" type="submit">Register</button>
     </form>
   </div>
   <script src="script.js"></script>
